--- a/AssetvillePaper/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AssetvillePaper/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,6 +147,8 @@ LastLevel=/Game/ChrisLevel/Bedroom
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_acousticGuitar_01.SM_acousticGuitar_01
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -162,7 +164,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/AssetsvilleTown/Meshes/BuildingTilset
+ContentBrowserTab1.SelectedPaths=/Game/AssetsvilleTown/Meshes
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1122,26 +1124,29 @@ PinnedCommandList.TimeStamp=2022.03.21-06.09.49
 PinnedCommandList.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2022.03.21-06.10.04
 SequencerWidgets.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2022.03.01-09.00.38
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AssetsvilleTown/Poses/SleepingPose
-MRUItem1=/Game/AssetsvilleTown/Poses/CharacterThinkingPose
+MRUItem0=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_acousticGuitar_01
+MRUItem1=/Game/BP_Player
 MRUItem2=/Game/ChrisLevel/Bedroom
-MRUItem3=/Game/AssetsvilleTown/Maps/Overview
-MRUItem4=/Game/PolygonTown/Maps/Demonstration
-MRUItem5=/Game/CustomAssets/lambert2
-MRUItem6=/Game/CustomAssets/lambert1
-MRUItem7=/Game/BP_Player
-MRUItem8=/Game/AssetsvilleTown/Poses/A_characterPoses
-MRUItem9=/Game/XavierLevel/NewWorld
-MRUItem10=/Game/ControlsSetUp
-MRUItem11=/Game/AntonioLevel/Young_StudyRoom_2
-MRUItem12=/Game/YoungLevel/Young_StudyRoom
-MRUItem13=/Game/Levels/Young_StudyRoom
-MRUItem14=/Game/BP_Plauer
-MRUItem15=/Game/AssetsvilleTown/BP_PlayerController
-MRUItem16=/Game/Controls
-MRUItem17=/Game/AssetsvilleTown/Maps/Demonstration
+MRUItem3=/Game/AssetsvilleTown/Poses/SleepingPose
+MRUItem4=/Game/AssetsvilleTown/Poses/CharacterThinkingPose
+MRUItem5=/Game/AssetsvilleTown/Maps/Overview
+MRUItem6=/Game/PolygonTown/Maps/Demonstration
+MRUItem7=/Game/CustomAssets/lambert2
+MRUItem8=/Game/CustomAssets/lambert1
+MRUItem9=/Game/AssetsvilleTown/Poses/A_characterPoses
+MRUItem10=/Game/XavierLevel/NewWorld
+MRUItem11=/Game/ControlsSetUp
+MRUItem12=/Game/AntonioLevel/Young_StudyRoom_2
+MRUItem13=/Game/YoungLevel/Young_StudyRoom
+MRUItem14=/Game/Levels/Young_StudyRoom
+MRUItem15=/Game/BP_Plauer
+MRUItem16=/Game/AssetsvilleTown/BP_PlayerController
+MRUItem17=/Game/Controls
+MRUItem18=/Game/AssetsvilleTown/Maps/Demonstration
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1541,7 +1546,7 @@ SpringArmComponent.Activation=True
 SpringArmComponent.Cooking=True
 SpringArmComponent.Events=True
 BP_Player_C.Tick=True
-BP_Player_C.Pawn=True
+BP_Player_C.Pawn=False
 BP_Player_C.Camera=True
 BP_Player_C.Replication=True
 BP_Player_C.Rendering=True
@@ -1693,6 +1698,17 @@ MaterialExpressionTextureSample.MaterialExpression=True
 BoneProxy.Transform=True
 BoneProxy.Bone=True
 BoneProxy.Reference Transform=True
+StaticMeshActor.MaterialParameters=False
+StaticMeshActor.Mobile=False
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1787,26 +1803,26 @@ InputSettings=True
 ChangeVariableType_Warning=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_doorHouse_01.SM_doorHouse_01;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_wallDoor_01_half.SM_wallDoor_01_half;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_wall_01.SM_wall_01;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_wall_01_half.SM_wall_01_half;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_roof_01.SM_roof_01;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_window_04.SM_window_04;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_window_05_double.SM_window_05_double;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_window_02.SM_window_02;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_floor_01.SM_floor_01;
-RecentlyPlaced=/Game/AssetsvilleTown/Poses/CharacterSleepPose.CharacterSleepPose;
-RecentlyPlaced=/Game/AssetsvilleTown/Poses/SleepingPose.SleepingPose;
-RecentlyPlaced=/Game/CustomAssets/PaperBinLid.PaperBinLid;
-RecentlyPlaced=/Game/BP_Player.BP_Player;
-RecentlyPlaced=/Game/CustomAssets/PaperBin.PaperBin;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/BuildingTilset/SM_window_03.SM_window_03;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Chair_04.SM_Chair_04;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Bed_03.SM_Bed_03;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Bed_01.SM_Bed_01;
-RecentlyPlaced=/Game/AssetsvilleTown/Poses/CharacterThinkingPose.CharacterThinkingPose;
-RecentlyPlaced=/Game/AssetsvilleTown/Meshes/Characters/SK_citizen_male_28.SK_citizen_male_28;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_acousticGuitar_01.SM_acousticGuitar_01;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Items/SM_Item_Frisbee_01.SM_Item_Frisbee_01;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/Weapons/SM_Pistol_02.SM_Pistol_02;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Ball_02.SM_Ball_02;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Cup_03.SM_Cup_03;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Carpet_01.SM_Carpet_01;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/Portraits/SM_portraitDeskFrame_07.SM_portraitDeskFrame_07;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_curtains_03.SM_curtains_03;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_curtains_04.SM_curtains_04;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Cupboard_04.SM_Cupboard_04;
+RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Cupboard_05.SM_Cupboard_05;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Book_02.SM_Prop_Book_02;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Book_Group_09.SM_Prop_Book_Group_09;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_BookOpen_01.SM_Prop_BookOpen_01;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Bookshelf_02.SM_Prop_Bookshelf_02;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Television_DVD_01.SM_Prop_Television_DVD_01;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Lamp_03.SM_Prop_Lamp_03;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Lamp_01.SM_Prop_Lamp_01;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Heater_01.SM_Prop_Heater_01;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Game_Controller_01.SM_Prop_Game_Controller_01;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1861,7 +1877,7 @@ DataAsset="\"Object.SkeletalMeshes\" "
 /Game/CustomAssets/lambert2.lambert2=1
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
