--- a/AssetvillePaper/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AssetvillePaper/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -148,7 +148,6 @@ LastLevel=/Game/ChrisLevel/Bedroom
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_acousticGuitar_01.SM_acousticGuitar_01
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -164,7 +163,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/AssetsvilleTown/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/PolygonTown
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1128,25 +1127,26 @@ StaticMeshEditor.TimeStamp=2022.03.01-09.00.38
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_acousticGuitar_01
-MRUItem1=/Game/BP_Player
-MRUItem2=/Game/ChrisLevel/Bedroom
-MRUItem3=/Game/AssetsvilleTown/Poses/SleepingPose
-MRUItem4=/Game/AssetsvilleTown/Poses/CharacterThinkingPose
-MRUItem5=/Game/AssetsvilleTown/Maps/Overview
-MRUItem6=/Game/PolygonTown/Maps/Demonstration
-MRUItem7=/Game/CustomAssets/lambert2
-MRUItem8=/Game/CustomAssets/lambert1
-MRUItem9=/Game/AssetsvilleTown/Poses/A_characterPoses
-MRUItem10=/Game/XavierLevel/NewWorld
-MRUItem11=/Game/ControlsSetUp
-MRUItem12=/Game/AntonioLevel/Young_StudyRoom_2
-MRUItem13=/Game/YoungLevel/Young_StudyRoom
-MRUItem14=/Game/Levels/Young_StudyRoom
-MRUItem15=/Game/BP_Plauer
-MRUItem16=/Game/AssetsvilleTown/BP_PlayerController
-MRUItem17=/Game/Controls
-MRUItem18=/Game/AssetsvilleTown/Maps/Demonstration
+MRUItem0=/Game/BP_Player
+MRUItem1=/Game/PolygonTown/Meshes/Props/SM_Prop_Lamp_03
+MRUItem2=/Game/AssetsvilleTown/Meshes/InteriorProps/Office/SM_Bin_02
+MRUItem3=/Game/PolygonTown/Meshes/Props/SM_Prop_BookOpen_01
+MRUItem4=/Game/PolygonTown/Meshes/Props/SM_Prop_Computer_Mouse_01
+MRUItem5=/Game/PolygonTown/Meshes/Props/SM_Prop_Computer_Screen_01
+MRUItem6=/Game/AssetsvilleTown/Meshes/Characters/SK_citizen_male_28
+MRUItem7=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Chair_04
+MRUItem8=/Game/AssetsvilleTown/Meshes/InteriorProps/Office/SM_Desk_02
+MRUItem9=/Game/PolygonTown/Meshes/Props/SM_Prop_Bed_Single_03
+MRUItem10=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_acousticGuitar_01
+MRUItem11=/Game/ChrisLevel/Bedroom
+MRUItem12=/Game/AssetsvilleTown/Poses/SleepingPose
+MRUItem13=/Game/AssetsvilleTown/Poses/CharacterThinkingPose
+MRUItem14=/Game/AssetsvilleTown/Maps/Overview
+MRUItem15=/Game/PolygonTown/Maps/Demonstration
+MRUItem16=/Game/CustomAssets/lambert2
+MRUItem17=/Game/CustomAssets/lambert1
+MRUItem18=/Game/AssetsvilleTown/Poses/A_characterPoses
+MRUItem19=/Game/XavierLevel/NewWorld
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1709,6 +1709,21 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1803,6 +1818,8 @@ InputSettings=True
 ChangeVariableType_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Computer_Mouse_01.SM_Prop_Computer_Mouse_01;
+RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Computer_Keyboard_01.SM_Prop_Computer_Keyboard_01;
 RecentlyPlaced=/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_acousticGuitar_01.SM_acousticGuitar_01;
 RecentlyPlaced=/Game/PolygonTown/Meshes/Items/SM_Item_Frisbee_01.SM_Item_Frisbee_01;
 RecentlyPlaced=/Game/AssetsvilleTown/Meshes/Weapons/SM_Pistol_02.SM_Pistol_02;
@@ -1821,8 +1838,6 @@ RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Bookshelf_02.SM_Prop_Books
 RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Television_DVD_01.SM_Prop_Television_DVD_01;
 RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Lamp_03.SM_Prop_Lamp_03;
 RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Lamp_01.SM_Prop_Lamp_01;
-RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Heater_01.SM_Prop_Heater_01;
-RecentlyPlaced=/Game/PolygonTown/Meshes/Props/SM_Prop_Game_Controller_01.SM_Prop_Game_Controller_01;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1875,6 +1890,16 @@ DataAsset="\"Object.SkeletalMeshes\" "
 /Game/BP_Player.BP_Player=1
 /Game/CustomAssets/lambert1.lambert1=1
 /Game/CustomAssets/lambert2.lambert2=1
+/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_acousticGuitar_01.SM_acousticGuitar_01=1
+/Game/PolygonTown/Meshes/Props/SM_Prop_Bed_Single_03.SM_Prop_Bed_Single_03=1
+/Game/AssetsvilleTown/Meshes/InteriorProps/Office/SM_Desk_02.SM_Desk_02=1
+/Game/AssetsvilleTown/Meshes/InteriorProps/House/SM_Chair_04.SM_Chair_04=1
+/Game/AssetsvilleTown/Meshes/Characters/SK_citizen_male_28.SK_citizen_male_28=1
+/Game/PolygonTown/Meshes/Props/SM_Prop_Computer_Screen_01.SM_Prop_Computer_Screen_01=1
+/Game/PolygonTown/Meshes/Props/SM_Prop_Computer_Mouse_01.SM_Prop_Computer_Mouse_01=1
+/Game/PolygonTown/Meshes/Props/SM_Prop_BookOpen_01.SM_Prop_BookOpen_01=1
+/Game/AssetsvilleTown/Meshes/InteriorProps/Office/SM_Bin_02.SM_Bin_02=1
+/Game/PolygonTown/Meshes/Props/SM_Prop_Lamp_03.SM_Prop_Lamp_03=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -1917,6 +1942,8 @@ TimelineEnabledSnaps=MontageSection
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
