Paper ball update
Updated paper ball model as per Chris' suggestion

--- a/AssetvillePaper/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AssetvillePaper/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=120.000 Y=64.000
-WindowSize=X=1279.333 Y=671.333
+WindowSize=X=1282.000 Y=674.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1126,11 +1126,11 @@ StaticMeshEditor.TimeStamp=2022.03.21-06.07.26
 StaticMeshEditor.LastCompileMethod=External
 
 [ContentBrowserRecent]
-MRUItem0=/Game/CustomAssets/PaperBallTexture
-MRUItem1=/Game/CustomAssets/PaperBall
-MRUItem2=/Game/CustomAssets/lambert1
-MRUItem3=/Game/CustomAssets/initialShadingGroup
-MRUItem4=/Game/CustomAssetDemo
+MRUItem0=/Game/CustomAssets/PaperBall
+MRUItem1=/Game/CustomAssetDemo
+MRUItem2=/Game/CustomAssets/PaperBallTexture
+MRUItem3=/Game/CustomAssets/lambert1
+MRUItem4=/Game/CustomAssets/initialShadingGroup
 MRUItem5=/Game/ChrisLevel/Bedroom
 MRUItem6=/Game/PolygonOffice/Materials/Misc/Mat_PolygonOffice_Screen_01
 MRUItem7=/Game/BP_Player
@@ -1726,6 +1726,7 @@ SkeletalMesh.Sampling=True
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 MaterialExpressionVertexColor.MaterialExpression=True
+AssetViewerSettings.Settings=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1905,6 +1906,7 @@ DataAsset="\"Object.SkeletalMeshes\" "
 /Game/PolygonOffice/Materials/Misc/Mat_PolygonOffice_Screen_01.Mat_PolygonOffice_Screen_01=1
 /Game/CustomAssets/initialShadingGroup.initialShadingGroup=1
 /Game/CustomAssets/PaperBallTexture.PaperBallTexture=1
+/Game/CustomAssets/PaperBall.PaperBall=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
