--- a/AssetvillePaper/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AssetvillePaper/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ MRUItem10=/Game/Levels/Young_StudyRoom
 MRUItem11=/Game/Controls
 
 [EditorStartup]
-LastLevel=/Game/AntonioLevel/AntonioKitchen
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -160,7 +160,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 ContentBrowserTab1.ActiveTypeFilters=StaticMesh
-ContentBrowserTab1.EnabledTypeFilters=StaticMesh
+ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game
@@ -204,7 +204,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=120.000 Y=64.000
-WindowSize=X=1279.333 Y=671.333
+WindowSize=X=1282.000 Y=674.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
