Solving Merge Conflicts
We must merge and set up a proper gitignore

--- a/AssetvillePaper/Config/DefaultEngine.ini
+++ b/AssetvillePaper/Config/DefaultEngine.ini
@@ -14,3 +14,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/AssetvillePaper")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/AssetvillePaper")
 
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
+
