--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,3 +14,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/AssetvillePaper")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/AssetvillePaper")
 
+[/Script/Engine.PhysicsSettings]
+DefaultShapeComplexity=CTF_UseComplexAsSimple
+
