--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/JoshMainMenuLevel/MainMenuLevel.MainMenuLevel
 GlobalDefaultGameMode=/Game/Blueprints/NewGameMode.NewGameMode_C
+EditorStartupMap=/Game/JoshMainMenuLevel/MainMenuLevel.MainMenuLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
