--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ ProjectID=5CCB103C491A743783B270ACDA05DF6C
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="")
 FullRebuild=False
@@ -74,5 +74,8 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/JoshMainMenuLevel/MainMenuLevel")
++MapsToCook=(FilePath="/Game/YoungLevel/Young_StudyRoom")
++MapsToCook=(FilePath="/Game/XavierLevel/Bathroom1")
 +MapsToCook=(FilePath="/Game/ChrisLevel/Bedroom")
++MapsToCook=(FilePath="/Game/AntonioLevel/AntonioKitchen")
 
